# negative-type-bound

./: Cargo.toml  README.md
src/: lib.rs
